apps/app_voicemail.c
@@ -3480,7 +3480,7 @@ static struct vm_state *get_vm_state_by_imapuser(const char *user, int interacti
 	if (interactive) {
 		struct vm_state *vms;
 		pthread_once(&ts_vmstate.once, ts_vmstate.key_init);
-		if ((vms = pthread_getspecific(ts_vmstate.key)) && vms->imapuser && !strcmp(vms->imapuser, user)) {
+		if ((vms = pthread_getspecific(ts_vmstate.key)) && !strcmp(vms->imapuser, user)) {
 			return vms;
 		}
 	}
@@ -3492,10 +3492,6 @@ static struct vm_state *get_vm_state_by_imapuser(const char *user, int interacti
 			continue;
 		}
 		if (vlist->vms->imapversion != imapversion) {
-			continue;
-		}
-		if (!vlist->vms->imapuser) {
-			ast_debug(3, "error: imapuser is NULL for %s\n", user);
 			continue;
 		}
 
@@ -3520,7 +3516,7 @@ static struct vm_state *get_vm_state_by_mailbox(const char *mailbox, const char 
 	if (interactive) {
 		struct vm_state *vms;
 		pthread_once(&ts_vmstate.once, ts_vmstate.key_init);
-		if ((vms = pthread_getspecific(ts_vmstate.key)) && vms->username && vms->context &&
+		if ((vms = pthread_getspecific(ts_vmstate.key)) &&
 		    !strcmp(vms->username,mailbox) && !strcmp(vms->context, local_context)) {
 			return vms;
 		}
@@ -3533,10 +3529,6 @@ static struct vm_state *get_vm_state_by_mailbox(const char *mailbox, const char 
 			continue;
 		}
 		if (vlist->vms->imapversion != imapversion) {
-			continue;
-		}
-		if (!vlist->vms->username || !vlist->vms->context) {
-			ast_debug(3, "error: username is NULL for %s\n", mailbox);
 			continue;
 		}
 
